
5.2a3 -> 5.2a4:
    - proyvind: do lazy mkdir of %_topdir, %_builddir, %_rpmdir & %_srcrpmdir
	when doing '--rebuild' so that it should mostly work easily for user.
    - proyvind: make it possible to set preferred build architectures when using
	libcpuinfo with ie. '%_prefer_buildarchs x86_64:i686:i586'.
    - proyvind: get the list of compatible archs printed with '--showrc' from
	mire platform patterns.
    - proyvind: use cpuinfo() probe for detecting platform rather than
	libcpuinfo directly.
    - jbj: delete ancient header+payload RSA signatures too using GPG (#488953).
    - jbj: rpmio: install rpmzlog.h and yarn.h, carry with rpmio.h.
    - jbj: rpmio: don't include glob.h.
    - proyvind: add support for cpuinfo() probe through libcpuinfo.
    - proyvind: perl: make sure to link against all required libraries to fix
	build with --no-undefined.
    - proyvind: only provide PayLoadIsLzma and PayLoadIsXz features when enabled.
    - proyvind: xzdio: kill backwards compatibility with ancient lzma utils.
    - proyvind: fix order of archs added throuh libcpuinfo so that
	rpmPlatformScore() will return correct value.

5.2a2 -> 5.2a3:
    - rse: use Pthreads under --with-pthreads controlled WITH_PTHREADS and not <pthreads.h> existance-derived HAVE_PTHREADS_H 
    - jbj: update po files (Translation Project).
    - jbj: yarn: lobotomize yarn.c conditioned on HAVE_PTHREAD_H.
    - jbj: rpmz: toss the pbzip2 carcass into the compression cassoulet ...
    - rse: upgrade devtool environment to: GNU m4 1.4.12, Perl 5.10.0, OpenSSL 0.9.8j, NEON 0.28.4, SQLite 3.6.11, File 5.00
    - rse: finally switch devtool from LZMA to XZ, too.
    - rse: remove ugly --with-lzma to --with-xz hack (really not needed)
    - rse: cleanup a few recently introduced compile-time warnings
    - jbj: rpmz: add attribution and debugging to rpmzq.
    - jbj: rpmz: carve out job queue and buffer pool management from pigz.